# BaconAlgo

./: .env.example  .gitignore  BACONALGO_UPGRADE_DOCUMENTATION.md  Cargo.toml  Continuons ici mon ami!! https___chatgpt.com_share.txt  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_2040.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  Indicateurs Lagging Leading.html  J’aimerais un bon script buy et sell target stop a (1).txt  Makefile  PHILOSOPHY.md  QUANTUM_ENGINE_IMPLEMENTATION.md  QUANTUM_README.md  QUANTUM_SUMMARY.txt  QUICKSTART.md  README.md  SETUP.ps1  START_BACONALGO.bat  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  indicateur.txt  init-dashboard.sh  init-rockets.sh  init-scanner.sh  init-stream.sh  launch_station.cmd  launch_station.sh  package-lock.json  package.json  package.json.save  setup_baconalgo.ps1  start.sh  verify-supabase.sh
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
.svelte-kit/: ambient.d.ts
api/: main.py  requirements.txt
dashboard/: package-lock.json  package.json
dashboard/src/lib/auction/: index.ts  volumeProfile.ts  vwap.ts  vwapMastery.ts
dashboard/src/lib/orderflow/: darkPool.ts  delta.ts  index.ts  optionsFlow.ts  orderFlowAnalyzer.ts
dashboard/src/lib/psychology/: biasDetector.ts  emotionalState.ts  index.ts
dashboard/src/lib/quantum/: barrier.ts  index.ts  probability.ts  quantumPriceModel.ts
dashboard/src/lib/scoring/: index.ts  ultimateScore.ts
dashboard/src/lib/sentiment/: aggregator.ts  index.ts  newsAnalyzer.ts  socialMedia.ts  socialSentiment.ts
dashboard/src/lib/smc/: bos.ts  detector.ts  fvg.ts  index.ts  liquidity.ts  orderBlock.ts  signals.ts
dashboard/src/lib/types/: api.ts
dashboard/src/routes/: +layout.svelte  +page.svelte
dashboard/src/routes/auction/: +page.svelte
dashboard/src/routes/chart/: +page.svelte
dashboard/src/routes/markets/: +page.svelte
dashboard/src/routes/orderflow/: +page.svelte
dashboard/src/routes/psychology/: +page.svelte
dashboard/src/routes/quantum/: +page.svelte
dashboard/src/routes/risk/: +page.svelte
dashboard/src/routes/scanner/: +page.svelte
dashboard/static/: manifest.json
deploy/: Caddyfile  README.md  backup.sh  cloudflare-tunnel-setup.sh  monitor.sh  setup-production.sh  windows-startup.bat  windows-stop.bat
discord-bot/: .env.example  bot.py
docs/: ADMIN_PANEL.md  README.md
execution/: .env.example  Cargo.toml  QUICKSTART.md  README.md  SMC_README.md  build.rs
execution/.cargo/: config.toml
execution/src/: config.rs  main.rs  news.rs
execution/src/api/: chart.rs  market.rs  mod.rs  models.rs  news.rs  performance.rs  routes.rs  signals.rs  sse.rs
execution/src/backtest/: backtest_engine.rs  mod.rs
execution/src/bus/: mod.rs  quantum_bus.rs
execution/src/engine/: mod.rs  order_router.rs  quantum_engine.rs  risk_manager.rs
execution/src/families/: mod.rs
execution/src/families/fundamental/: mod.rs
execution/src/families/technical/: mod.rs
execution/src/market/: adapter.rs  binance.rs  candle.rs  crypto.rs  crypto_mock.rs  future.rs  future_mock.rs  mod.rs  provider_manager.rs  stock.rs  stock_mock.rs  universe.rs
execution/src/market/providers/: alphavantage.rs  binance.rs  coingecko.rs  finnhub.rs  mod.rs  polygon.rs  twelvedata.rs  yahoo.rs
execution/src/scanner/: context.rs  engine.rs  market_data.rs  mod.rs  quantum_scanner.rs  signal_engine.rs  timeframe.rs
execution/src/scanner/indicators/: delta.rs  elliott.rs  fibonacci.rs  fvg.rs  mod.rs  orb.rs  order_blocks.rs  volume_profile.rs
execution/src/signal/: mod.rs  models.rs  scorer.rs
execution/src/smc/: bos.rs  choch.rs  fvg.rs  integration_example.rs  liquidity.rs  mod.rs  order_blocks.rs
ml/: README.md  backtester.py  pattern_detector.py  predictor.py  requirements.txt
scripts/: deploy.sh
src/: Cargo.toml  main.rs
src/api/: historical.rs  models.rs  portfolio.rs  preferences.rs  quotes.rs  routes.rs  sse.rs  websocket.rs
src/execution/: cargo.toml  executor.rs  mod.rs  model.rs
src/lib/components/: +page.svelte  Chart.svelte  ChartOPUS.svelte  HeaderOPUS.svelte  RocketCard.svelte  RocketsOPUS.svelte  ScannerOPUS.svelte  ScannerTable.svelte  SentimentOPUS.svelte  SentimentTile.svelte
src/lib/dev/: fakeRockets.ts
src/lib/stores/: focus.ts  live.js  risk.ts  rockets.ts  scanner.ts  sentiment.ts  socket.ts  stream.ts
src/lib/stream/: socket.ts
src/lib/styles/: bacon.css
src/routes/: +page.svelte
src/signal/: mod.rs  models.rs
station/: .env.example  Dockerfile  README.md  STREAM_COMPONENTS.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
station/src/: app.css  service-worker.ts
station/src/lib/: config.ts
station/src/lib/brokers/: alpaca.ts  bitget.ts  ib.ts  questrade.ts  types.ts
station/src/lib/components/: AnimatedBackground.svelte  Filters.svelte  GlassCard.svelte  Navbar.svelte  QuantumPerformance.svelte  SignalCard.svelte  SignalControlPanel.svelte  SignalScanner.svelte  StatsGrid.svelte
station/src/lib/config/: env.ts
station/src/lib/i18n/: i18n.ts  translations.ts
station/src/lib/institutional/: orderFlow.ts
station/src/lib/middleware/: auth.ts
station/src/lib/risk/: riskEngine.ts
station/src/lib/security/: encryption.ts
station/src/lib/services/: apiClient.ts  audioSystem.ts  (+4 more)
station/src/routes/: +layout.svelte  +page.svelte
station/static/: manifest.json  offline.html  sw.js
station/static/bacon/: bacon-loader.js
supabase/: QUICKSTART.md  README.md  examples.ts
supabase/migrations/: 001_initial_schema.sql  002_saas_platform.sql  003_pricing_and_coupons.sql
(+114 files in other folders)
