[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rkyv = "0.7"  # Zero-copy serialization pour performance maximale
rmp-serde = "1.1"  # MessagePack pour WebSocket binary

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }

# Configuration
dotenvy = "0.15"
lazy_static = "1.4"

# Middleware & utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
async-stream = "0.3"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# RSS/News feeds
feed-rs = "1.3"

# Other utilities
uuid = { version = "1", features = ["v4"] }
url = "2"
async-trait = "0.1"

# ⚡ PERFORMANCE - Lock-free concurrency
crossbeam = "0.8"  # Lock-free data structures
crossbeam-channel = "0.5"  # MPMC channels lock-free
parking_lot = "0.12"  # Mutex/RwLock plus rapides que std
dashmap = "5.5"  # HashMap concurrent lock-free

# ⚡ PERFORMANCE - Parallelism
rayon = "1.8"  # Data parallelism pour scanner
flume = "0.11"  # MPMC channels ultra-rapides

# ⚡ PERFORMANCE - Memory allocators
mimalloc = { version = "0.1", default-features = false }  # Allocateur haute performance

# ⚡ PERFORMANCE - SIMD & optimizations
wide = "0.7"  # SIMD abstractions
num_cpus = "1.16"  # Détection du nombre de CPU

# ⚡ PERFORMANCE - Zero-allocation containers
smallvec = { version = "1.11", features = ["union", "const_generics"] }
arrayvec = "0.7"

# 📊 ANALYTICS - Statistics & Math
statrs = "0.16"  # Statistical computations
ndarray = "0.15"  # N-dimensional arrays pour backtesting

# 📈 TECHNICAL ANALYSIS
ta = "0.5"  # Technical indicators library

# 🔧 UTILITIES
once_cell = "1.19"  # Lazy static alternative
anyhow = "1.0"  # Error handling
thiserror = "1.0"  # Custom error types

[build-dependencies]
rustc_version = "0.4"  # Détection de version Rust pour conditional compilation

[profile.release]
opt-level = 3  # Optimisation maximale
lto = "fat"  # Link-time optimization aggressive
codegen-units = 1  # Une seule unité de génération pour meilleures optimisations
panic = "abort"  # Panic = abort (plus rapide)
strip = true  # Strip symbols pour binary plus petit
debug = false  # Pas de debug info
overflow-checks = false  # Désactiver les checks d'overflow en release

[profile.bench]
inherits = "release"
debug = true  # Garder les symbols pour profiling

