[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }

# Configuration
dotenvy = "0.15"
lazy_static = "1.4"

# Middleware & utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-stream = "0.3"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# RSS/News feeds
feed-rs = "1.3"

# Other utilities
uuid = { version = "1", features = ["v4"] }
url = "2"
async-trait = "0.1"

# Performance & Concurrency
crossbeam = "0.8"
rayon = "1.8"
parking_lot = "0.12"
dashmap = "5.5"
flume = "0.11"

# Zero-copy serialization
rkyv = "0.7"

# Memory allocator
mimalloc = { version = "0.1", default-features = false }

# SIMD & Math
ndarray = "0.15"
smallvec = { version = "1.11", features = ["union", "const_generics"] }
arrayvec = "0.7"

# Random number generation
rand = "0.8"

